--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
 
-  - title: "Academic Service"
+  - title: "Teaching"
     url: /teaching/    
 
   - title: "Publications"
