--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,24 +1,33 @@
-# main links links
+# The following is the order of the links in the header of the website.
+#
+# Changing the order here will adjust the order and you can also add additional
+# links. Removing a link prevents it from showing in the header, but does not
+# prevent it from being included in the site.
+#
+# NOTE that only one of the CV options should be selected, the first is for the
+#      Markdown formatted page while the second is generated using JSON.
+
 main:
+  - title: "Publications"
+    url: /publications/
+
+  #- title: "Talks"
+  #  url: /talks/    
+
+  - title: "Academic Services"
+    url: /teaching/    
     
-  # - title: "Portfolio"
-  #    url: /portfolio/
+  #- title: "Portfolio"
+  #  url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
-
-  - title: "Teaching"
-    url: /teaching/    
-
-  - title: "Publications"
-     url: /publications/ 
-
-  # - title: "Talks"
-  #   url: /talks/   
-
-  - title: "CV"
-    url: "https://drive.google.com/file/d/17wYiveh-a3hAipuxYDci_8lSCnS9-BHY/view?usp=sharing"
     
-  #  url: https://drive.google.com/file/d/17wYiveh-a3hAipuxYDci_8lSCnS9-BHY/view?usp=sharing
-  # - title: "Guide"
-  #   url: /markdown/
+  #- title: "CV"
+  #  url: /cv/
+    
+   - title: "CV"
+     url: "https://drive.google.com/file/d/17wYiveh-a3hAipuxYDci_8lSCnS9-BHY/view?usp=sharing"
+    
+  #- title: "Guide"
+  #  url: /markdown/
